refactor: 파일 구조 변경 및 함수화 작업

--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Rating Site</title>
+    <script type="module" src="./src/main.js"></script>
+    <!-- <script type="module" src="./src/test.js"></script> -->
+    <!-- <script type="module" src="./src/apis/getApi.js"></script> -->
+    <!-- <script type="module" src="./src/store/store.js"></script> -->
+
+    <link rel="stylesheet" href="./css/mainStyle.css" />
   </head>
-  <script src="./script/mainScript.js" defer></script>
-  <link rel="stylesheet" href="./css/mainStyle.css" />
   <body>
     <header>
-      <img src="/img/로고_WHITE.png" alt="logo" id="header-logo" />
+      <img src="/img/logo_WHITE.png" alt="logo" id="header-logo" />
       <form id="search-box">
-        <input
-          type="text"
-          id="search-movie"
-          placeholder="원하는 영화 제목을 입력하세요"
-        />
+        <input type="text" id="search-movie" placeholder="원하는 영화 제목을 입력하세요" />
         <button id="search-button">검색</button>
       </form>
     </header>
+    <ul id="card-container"></ul>
   </body>
 </html>
