--- a/index.html
+++ b/index.html
@@ -5,17 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Rating Site</title>
     <script type="module" src="./src/main.js"></script>
-    <!-- <script type="module" src="./src/test.js"></script> -->
-    <!-- <script type="module" src="./src/apis/getApi.js"></script> -->
-    <!-- <script type="module" src="./src/store/store.js"></script> -->
-
     <link rel="stylesheet" href="./css/mainStyle.css" />
   </head>
   <body>
     <header>
       <img src="/img/logo_WHITE.png" alt="logo" id="header-logo" />
       <form id="search-box">
-        <input type="text" id="search-movie" placeholder="원하는 영화 제목을 입력하세요" />
+        <input type="text" id="search-input" placeholder="원하는 영화 제목을 입력하세요" />
         <button id="search-button">검색</button>
       </form>
     </header>
