style: card display → 반응형 grid로 변경

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <button id="search-button">검색</button>
       </form>
     </header>
-    <ul id="card-container"></ul>
+    <section id="content-area">
+      <ul id="card-container"></ul>
+    </section>
   </body>
 </html>
