fix: 이미지 경로 수정

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <img src="/img/logo_WHITE.png" alt="logo" id="header-logo" />
+      <img src="./img/logo_WHITE.png" alt="logo" id="header-logo" />
       <form id="search-box">
         <input type="text" id="search-input" placeholder="원하는 영화 제목을 입력하세요" />
         <button id="search-button">검색</button>
